--- a/first-project/src/app/todo.txt
+++ b/first-project/src/app/todo.txt
@@ -24,3 +24,16 @@
   getDate(): Date {
     return new Date();
   }
+"alert('Wyczyszczono Liste pomyśnie!')"
+   onclick=
+
+     list =['jeden', 'dwa', 'trzy', 'cztery', 'pięć'];  
+  weeks = {
+  monday: 'Poniedziałek',
+  tuesday: 'Wtorek',
+  wensday: 'Środa',
+  thursday: 'Czwartek',
+  friday: 'Piątek',
+  saturday: 'Sobota',
+  sunday: 'Niedziela',
+    };
